# pp-hometasks

./: .gitignore  CMakeLists.txt  task1.cpp  task11.cpp  task12.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
mpi/: mpi_task1.cpp  mpi_task10.cpp  mpi_task11.cpp  mpi_task12.cpp  mpi_task13.cpp  mpi_task14.cpp  mpi_task15.cpp  mpi_task2.cpp  mpi_task3.cpp  mpi_task4.cpp  mpi_task5.cpp  mpi_task6.cpp  mpi_task7.cpp  mpi_task8.cpp  mpi_task9.cpp
mpi-2/: task4_1.cpp  task4_2.cpp  task5_1.cpp  task5_2.cpp  task5_3.cpp
openmp/: task10.cpp  task13.cpp  task3.cpp  task4.cpp  task6.cpp  task7.cpp  task9.cpp
quick_sort/: no_parallel.cpp  parallel.cpp
