cmake_minimum_required(VERSION 3.16)
project(OpenMPTest)

set(CMAKE_CXX_STANDARD 11)

find_package(OpenMP REQUIRED)
if(OpenMP_CXX_FOUND)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

find_package(MPI REQUIRED)

include_directories(${MPI_INCLUDE_PATH})

add_executable(task1 mpi/mpi_task1.cpp)
add_executable(task2 mpi/mpi_task2.cpp)
add_executable(task3 mpi/mpi_task3.cpp)
add_executable(task4 mpi/mpi_task4.cpp)
add_executable(task5 mpi/mpi_task5.cpp)
add_executable(task6 mpi/mpi_task6.cpp)
add_executable(task7 mpi/mpi_task7.cpp)
add_executable(task8 mpi/mpi_task8.cpp)
add_executable(task9 mpi/mpi_task9.cpp)
add_executable(task10 mpi/mpi_task10.cpp)
add_executable(task11 mpi/mpi_task11.cpp)
add_executable(task12 mpi/mpi_task12.cpp)
add_executable(task13 mpi/mpi_task13.cpp)
add_executable(task14 mpi/mpi_task14.cpp)
add_executable(task15 mpi/mpi_task15.cpp)

# Связываем программу с MPI библиотекой
target_link_libraries(task1 ${MPI_C_LIBRARIES})
target_link_libraries(task2 ${MPI_C_LIBRARIES})
target_link_libraries(task3 ${MPI_C_LIBRARIES})
target_link_libraries(task4 ${MPI_C_LIBRARIES})
target_link_libraries(task5 ${MPI_C_LIBRARIES})
target_link_libraries(task6 ${MPI_C_LIBRARIES})
target_link_libraries(task7 ${MPI_C_LIBRARIES})
target_link_libraries(task8 ${MPI_C_LIBRARIES})
target_link_libraries(task9 ${MPI_C_LIBRARIES})
target_link_libraries(task10 ${MPI_C_LIBRARIES})
target_link_libraries(task11 ${MPI_C_LIBRARIES})
target_link_libraries(task12 ${MPI_C_LIBRARIES})
target_link_libraries(task13 ${MPI_C_LIBRARIES})
target_link_libraries(task14 ${MPI_C_LIBRARIES})
target_link_libraries(task15 ${MPI_C_LIBRARIES})