cmake_minimum_required(VERSION 3.16)
project(OpenMPTest)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_EXE_LINKER_FLAGS "-static")


find_package(OpenMP REQUIRED)
if(OpenMP_CXX_FOUND)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

find_package(MPI REQUIRED)

include_directories(${MPI_INCLUDE_PATH})

add_executable(task1 mpi/mpi_task1.cpp)
add_executable(task2 mpi/mpi_task2.cpp)
add_executable(task3 mpi/mpi_task3.cpp)
add_executable(task4 mpi/mpi_task4.cpp)
add_executable(task5 mpi/mpi_task5.cpp)
add_executable(task6 mpi/mpi_task6.cpp)
add_executable(task7 mpi/mpi_task7.cpp)
add_executable(task8 mpi/mpi_task8.cpp)
add_executable(task9 mpi/mpi_task9.cpp)
add_executable(task10 mpi/mpi_task10.cpp)
add_executable(task11 mpi/mpi_task11.cpp)
add_executable(task12 mpi/mpi_task12.cpp)
add_executable(task13 mpi/mpi_task13.cpp)
add_executable(task14 mpi/mpi_task14.cpp)
add_executable(task15 mpi/mpi_task15.cpp)
add_executable(task4_1 mpi-2/task4_1.cpp)
add_executable(task4_2 mpi-2/task4_2.cpp)
add_executable(task5_1 mpi-2/task5_1.cpp)
add_executable(task5_2 mpi-2/task5_2.cpp)
add_executable(task5_3 mpi-2/task5_3.cpp)
add_executable(no_parallel quick_sort/no_parallel.cpp)
add_executable(parallel quick_sort/parallel.cpp)

# Связываем программу с MPI библиотекой
target_link_libraries(task1 ${MPI_C_LIBRARIES})
target_link_libraries(task2 ${MPI_C_LIBRARIES})
target_link_libraries(task3 ${MPI_C_LIBRARIES})
target_link_libraries(task4 ${MPI_C_LIBRARIES})
target_link_libraries(task5 ${MPI_C_LIBRARIES})
target_link_libraries(task6 ${MPI_C_LIBRARIES})
target_link_libraries(task7 ${MPI_C_LIBRARIES})
target_link_libraries(task8 ${MPI_C_LIBRARIES})
target_link_libraries(task9 ${MPI_C_LIBRARIES})
target_link_libraries(task10 ${MPI_C_LIBRARIES})
target_link_libraries(task11 ${MPI_C_LIBRARIES})
target_link_libraries(task12 ${MPI_C_LIBRARIES})
target_link_libraries(task13 ${MPI_C_LIBRARIES})
target_link_libraries(task14 ${MPI_C_LIBRARIES})
target_link_libraries(task15 ${MPI_C_LIBRARIES})
target_link_libraries(task4_1 ${MPI_C_LIBRARIES})
target_link_libraries(task4_2 ${MPI_C_LIBRARIES})
target_link_libraries(task5_1 ${MPI_C_LIBRARIES})
target_link_libraries(task5_2 ${MPI_C_LIBRARIES})
target_link_libraries(task5_3 ${MPI_C_LIBRARIES})

target_link_libraries(parallel ${MPI_C_LIBRARIES})
